traces/bug_25.txt
examples++-load/Element_QF.cpp:27: error: DEAD_STORE
  The value written to &p (type int*) is never used.
Showing all 1 steps of the trace


examples++-load/Element_QF.cpp:27:14: Write of unused value
25.               *p++=0;
26.               *p++=0;
27.               *p++=n;
                   ^
28.               return d;
29.           }
